fix sidebar style on mobile view

--- a/src/App.css
+++ b/src/App.css
@@ -10,15 +10,6 @@
 
 }
 
-
-
-
-
-
-
-
-
-
 #container {
   display: flex;
   flex-direction: column;
@@ -58,3 +49,16 @@ line-height: 1.5;
 
   
 
+
+
+@media only screen and (max-device-width: 480px) {
+  #container {
+    display: flex;
+    flex-direction: column;
+    font-size: 15px;
+    line-height: 1.5;
+    width: 100%;
+  }
+  
+  
+}
